# bcr_arm-release

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  debian.store  package.xml  patches.conf  releaser_history.json  tracks.yaml
bcr_arm/: package.xml
bcr_arm_description/: package.xml
bcr_arm_description/launch/: bcr_arm_description.launch.py
bcr_arm_description/meshes/: base_joint.dae  bcr_logo.stl  end_effector_mount.dae  joint_housing_j2.dae  joint_housing_j3.dae  joint_housing_j5.dae  joint_housing_j6.dae  joint_output_j2.dae  joint_output_j4.dae  joint_output_j6.dae  joint_shaft_j1.dae  joint_shaft_j1.stl.dae  link_l1.dae
bcr_arm_description/urdf/control/: gazebo_sim_ros2_control.urdf.xacro  ros2_control.urdf.xacro
bcr_arm_description/urdf/mech/: bcr_arm_mech.urdf.xacro
bcr_arm_description/urdf/robots/: bcr_arm.urdf
bcr_arm_description/urdf/sensors/: depth_camera.urdf.xacro
bcr_arm_gazebo/: CHANGELOG.rst
bcr_arm_gazebo/launch/: bcr_arm.gazebo.launch.py  bringup.gazebo.launch.py
bcr_arm_gazebo/models/cheezit_big_original/: model.config  model.sdf
bcr_arm_gazebo/models/coke_can/: model.config  model.sdf
bcr_arm_gazebo/models/mustard/: model.config
bcr_arm_gazebo/models/red_cylinder/: model.sdf
bcr_arm_gazebo/scripts/: control_arm_cli.py
bcr_arm_gazebo/worlds/: empty.world  house.world  pick_and_place_demo.world
bcr_arm_moveit_config/: .setup_assistant
bcr_arm_moveit_config/config/: bcr_arm.ros2_control.xacro  initial_positions.yaml  joint_limits.yaml  sensors_3d.yaml
bcr_arm_moveit_config/launch/: demo.launch.py  isaac_demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  warehouse_db.launch.py
bcr_arm_ros2/: CMakeLists.txt  README.md  package.xml
config/: bcr_arm.srdf  bcr_arm.urdf.xacro  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
debian/: changelog  control  copyright  gbp.conf  rules
isaacsim/: bcr_arm_scene.usd
isaacsim/configuration/: bcr_arm_scene_base.usd  bcr_arm_scene_physics.usd  bcr_arm_scene_sensor.usd
launch/: bcr_arm_moveit_gazebo.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
meshes/: joint_housing_j4.dae  joint_housing_j7.dae  joint_shaft_j3.dae  joint_shaft_j5.dae  joint_shaft_j7.dae  link_l2.dae  link_l3.dae  link_l4.dae  tool_flange.dae
models/cardboard_box/: model.config  model.sdf
models/mustard/: model.sdf
models/red_cylinder/: model.config
rviz/: bcr_arm.rviz
scripts/: test_arm_movement.py
urdf/robots/: bcr_arm.urdf.xacro
urdf/robots/bcr_arm/: bcr_arm.usd
urdf/robots/bcr_arm/configuration/: bcr_arm_physics.usd
