<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bcr_arm_moveit_config</name>
  <version>0.1.0</version>
  <description>moveit configuration and launch files for motion planning with the bcr arm</description>
  <maintainer email="vimarsh@blackcoffeerobotics.com">Vimarsh Shah</maintainer>
  <maintainer email="mathew@blackcoffeerobotics.com">Mathew Hans</maintainer>
  <maintainer email="gaurav@blackcoffeerobotics.com">Gaurav Gupta</maintainer>
  
  <license>Apache-2.0</license>

  <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit2/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit2</url>

  <author email="vimarsh@blackcoffeerobotics.com">Vimarsh</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <!-- The next 2 packages are required for the gazebo simulation.
       We don't include them by default to prevent installing gazebo and all its dependencies. -->
  <!-- <exec_depend>joint_trajectory_controller</exec_depend> -->
  <!-- <exec_depend>gazebo_ros_control</exec_depend> -->
  <exec_depend>bcr_arm_description</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_setup_assistant</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rviz_common</exec_depend>
  <exec_depend>rviz_default_plugins</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  
  <exec_depend>topic_based_ros2_control</exec_depend>
  <!-- This will probably give error as it has to be built from source for non humble / rolling distros:
    https://github.com/PickNikRobotics/topic_based_ros2_control/blob/main/doc/installation.md 
    todo: mark as issue and integrate building from source for jazzy
    -->


  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
