<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bcr_arm</name>
  <version>0.1.0</version>
  <description>Metapackage for the BCR Arm robot stack</description>
  <maintainer email="vimarsh@blackcoffeerobotics.com">Vimarsh Shah</maintainer>
  <maintainer email="mathew@blackcoffeerobotics.com">Mathew Hans</maintainer>
  <maintainer email="gaurav@blackcoffeerobotics.com">Gaurav Gupta</maintainer>
  <license>Apache License 2.0</license>
  <exec_depend>bcr_arm_description</exec_depend>
  <exec_depend>bcr_arm_gazebo</exec_depend>
  <exec_depend>bcr_arm_moveit_config</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
