<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bcr_arm_description</name>
  <version>0.1.0</version>
  <description>robot description files including urdf, meshes and launch files for the bcr arm</description>
  <maintainer email="vimarsh@blackcoffeerobotics.com">Vimarsh Shah</maintainer>
  <maintainer email="mathew@blackcoffeerobotics.com">Mathew Hans</maintainer>
  <maintainer email="gaurav@blackcoffeerobotics.com">Gaurav Gupta</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf_tutorial</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
