<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bcr_arm_ros2</name>
  <version>0.1.0</version>
  <description>TODO: Package description (metapackage)</description>
  <maintainer email="vimarsh@blackcoffeerobotics.com">Vimarsh Shah</maintainer>
  <maintainer email="mathew@blackcoffeerobotics.com">Mathew Hans</maintainer>
  <maintainer email="gaurav@blackcoffeerobotics.com">Gaurav Gupta</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>bcr_arm_description</exec_depend>
  <exec_depend>bcr_arm_gazebo</exec_depend>
  <exec_depend>bcr_arm_moveit_config</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
